--- a/CodingTest/3-4. 연속부분수열.md
+++ b/CodingTest/3-4. 연속부분수열.md
@@ -66,6 +66,6 @@ public class Main{
 		}
 		return answer;
 	}
-  // 같은방법으로 창문밀기 방법이었지만 차이가 있다면 while문을 통해 한번 걸렸을때 한번더 왼쪽을 줄이는 
+  // 같은방법으로 창문밀기 방법이었지만 차이가 있다면 while문을 통해 한번 걸렸을때 한번더 왼쪽을 줄이는 로직이 없었다. 
   
   ```
