--- a/What is/쿠키,세션,캐시,토큰.md
+++ b/What is/쿠키,세션,캐시,토큰.md
@@ -1,1 +1,27 @@
-# coming soon
+# 쿠키 세션 캐시 토큰
+```
+TIL을하며 Stateless를 배웠다. 거기서 연결유지를 위해 쿠세캐토를 이용한다고 한다.
+공부하면서도 쿠키와 세션에 대해서 배우고 세션은 forRest에서 로그인 상태유지를 위해 사용했지만
+다른 것들은 사용한 경험이 없어서 헷깔리는 부분이 있어 정리해본다
+```
+
+# 간단개념
+### 쿠키
+* 웹사이트 접속시 *내컴퓨터*에 저장되는 데이터
+* 사용자에 의해 조작되어도 크게 문제되지 않을 정보를 부라우저에 저장
+* 유저가 서버에 요청하면 서버가 유저에게 응답하며 유저의 브라우저에 쿠키를 저장
+* 유효기간을 설정할 수 있음
+### 세션
+* 웹사이트 접속시 *웹서버*에 저장되는 데이터
+* 인증에 대한 정보를 서버에 저장
+* http의 특성으로 인해 사용자의 정보를 저장할 수 없어 자주 사용하는 방법
+* 사용자가 요청시 서버가 SessionID를 생성 후 응답으로 SessionID를 쿠키에 포함해서 보냄
+### 캐시
+* 웹사이트 사용시 자주 사용하는 데이터나 값을 미리 복사 두는 데이터
+* 한번 번송받은 데이터를 저장해 두었다가 필요할때 꺼내쓰기
+### 토큰
+* 난수형태의 문자열 / 데이터에 접근하려는 유저에게 권한을 부여하는 key
+* 인증에 대한 정보를 사용자가 저장
+* SessionDB를 많이 가지고 있을 필요가 없어지고 인증을 위한 절차가 간소화됨
+* 요청시 서버는 사용자에게 토큰을 주고 나중에 사용자가 또 다시 토큰과 함께 요청할때 토큰을 확인
+* 암호화되어 있지않아 매우 중요한 정보를 담아서는 안됌
