--- a/CodingTest/4-5. k번째 큰수.md
+++ b/CodingTest/4-5. k번째 큰수.md
@@ -1,7 +1,9 @@
 # 4-5. k번재 큰수(TreeSet)
 ### 설명
-    현수는 1부터 100사이의 자연수가 적힌 N장의 카드를 가지고 있습니다. 같은 숫자의 카드가 여러장 있을 수 있습니다.
-    현수는 이 중 3장을 뽑아 각 카드에 적힌 수를 합한 값을 기록하려고 합니다. 3장을 뽑을 수 있는 모든 경우를 기록합니다.
+    현수는 1부터 100사이의 자연수가 적힌 N장의 카드를 가지고 있습니다. 
+    같은 숫자의 카드가 여러장 있을 수 있습니다.
+    현수는 이 중 3장을 뽑아 각 카드에 적힌 수를 합한 값을 기록하려고 합니다. 
+    3장을 뽑을 수 있는 모든 경우를 기록합니다.
     기록한 값 중 K번째로 큰 수를 출력하는 프로그램을 작성하세요.
     만약 큰 수부터 만들어진 수가 25 25 23 23 22 20 19......이고 K값이 3이라면 K번째 큰 값은 22입니다.
 
@@ -55,4 +57,10 @@ public class Main{
 	}
   
   // 자료구조중 tree를 처음 써볼 수 있었음
+  // set은 중복 없음
+  // set.remove(143);  143 지우기
+  // set.size(); 셋의 크기
+  // set.first(); 현재 내림차순이기 때문에 최고값
+  // set.last();  현재 내림차순이기 때문에 최소값
+  
   ```
